Feature: Email verification - User should verify his email address - Email verified middleware was created - After registration user receive verification mail on his email - User can resend verification on his email
